--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,6 +1,6 @@
 /* width */
 ::-webkit-scrollbar {
-    width: 5px;
+    width: 7px;
 }
 
 /* Track */
@@ -16,6 +16,7 @@
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
     background: #f1f1f1;
+    cursor: pointer;
 }
 
 .rainbow-text {
