Minor visual enhancements

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -20,7 +20,7 @@
 }
 
 .rainbow-text {
-    background-image: linear-gradient(to left, violet, indigo, cyan, green, yellow, orange, red);
+    background-image: linear-gradient(to left, indigo, cyan, green, yellow, orange, red);
     -webkit-background-clip: text;
     color: transparent;
 }
